# fugu

./: .gitignore  Cargo.toml  README.md  todo.md
src/: app.rs  main.rs
src/common/: mod.rs
src/constants/: mod.rs
src/dialog/: confirm.rs  editor_table.rs  mod.rs
src/editor/: dialog.rs  mod.rs  operation.rs
src/file_panel/: file_tree.rs  loader.rs  mod.rs  operation.rs  outline.rs  tree.rs
src/menu_bar/: mod.rs
src/preview/: image_gallery.rs  log_viewer.rs  markdown.rs  mod.rs  text_board.rs  viewer.rs
src/status_bar/: mod.rs
