[package]
name = "fugu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
iced = {version="0.14.0", features=["markdown", "tokio"]}
iced_aw = { version = "0.13.0", features = ["full"] }
jiff = "0.2.16"
rfd = "0.16.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version="1.48.0", features=["full"]}
