[package]
name = "fugu"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version="0.14.0", features=["sipper", "markdown", "tokio", "image", "highlighter"]}
iced_aw = { version = "0.13.0", features = ["full"] }
jiff = "0.2.16"
rfd = "0.16.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version="1.48.0", features=["full"]}
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = {version="0.3.22", features=["env-filter", "fmt", "chrono"]}
